syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2021 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "GetByKey.proto";
import "GetBySolidityID.proto";

import "ContractCallLocal.proto";
import "ContractGetInfo.proto";
import "ContractGetBytecode.proto";
import "ContractGetRecords.proto";

import "CryptoGetAccountBalance.proto";
import "CryptoGetAccountRecords.proto";
import "CryptoGetInfo.proto";
import "CryptoGetLiveHash.proto";
import "CryptoGetStakers.proto";

import "FileGetContents.proto";
import "FileGetInfo.proto";

import "TransactionGetReceipt.proto";
import "TransactionGetRecord.proto";
import "TransactionGetFastRecord.proto";

import "ConsensusGetTopicInfo.proto";

import "NetworkGetVersionInfo.proto";
import "TokenGetInfo.proto";
import "ScheduleGetInfo.proto";

import "TokenGetAccountNftInfos.proto";
import "TokenGetNftInfo.proto";
import "TokenGetNftInfos.proto";

/* A single query, which is sent from the client to a node. This includes all possible queries. Each Query should not have more than 50 levels. */
message Query {
    oneof query {
        GetByKeyQuery getByKey = 1; // Get all entities associated with a given key
        GetBySolidityIDQuery getBySolidityID = 2; // Get the IDs in the format used in transactions, given the format used in Solidity
        ContractCallLocalQuery contractCallLocal = 3; // Call a function of a smart contract instance
        ContractGetInfoQuery contractGetInfo = 4; // Get information about a smart contract instance
        ContractGetBytecodeQuery contractGetBytecode = 5; // Get bytecode used by a smart contract instance
        ContractGetRecordsQuery ContractGetRecords = 6; // Get Records of the contract instance

        CryptoGetAccountBalanceQuery cryptogetAccountBalance = 7; // Get the current balance in a cryptocurrency account
        CryptoGetAccountRecordsQuery cryptoGetAccountRecords = 8; // Get all the records that currently exist for transactions involving an account
        CryptoGetInfoQuery cryptoGetInfo = 9; // Get all information about an account
        CryptoGetLiveHashQuery cryptoGetLiveHash = 10; // Get a single livehash from a single account, if present
        CryptoGetStakersQuery cryptoGetProxyStakers = 11; // Get all the accounts that proxy stake to a given account, and how much they proxy stake (not yet implemented in the current API)

        FileGetContentsQuery fileGetContents = 12; // Get the contents of a file (the bytes stored in it)
        FileGetInfoQuery fileGetInfo = 13; // Get information about a file, such as its expiration date

        TransactionGetReceiptQuery transactionGetReceipt = 14; // Get a receipt for a transaction (lasts 180 seconds)
        TransactionGetRecordQuery transactionGetRecord = 15; // Get a record for a transaction
        TransactionGetFastRecordQuery transactionGetFastRecord = 16; // Get a record for a transaction (lasts 180 seconds)
        ConsensusGetTopicInfoQuery consensusGetTopicInfo = 50; // Get the parameters of and state of a consensus topic.

        NetworkGetVersionInfoQuery networkGetVersionInfo = 51; // Get the versions of the HAPI protobuf and Hedera Services software deployed on the responding node.

        TokenGetInfoQuery tokenGetInfo = 52; // Get all information about a token

        ScheduleGetInfoQuery scheduleGetInfo = 53; // Get all information about a scheduled entity

        TokenGetAccountNftInfosQuery tokenGetAccountNftInfos = 54; // Get a list of NFTs associated with the account
        TokenGetNftInfoQuery tokenGetNftInfo = 55; // Get all information about a NFT
        TokenGetNftInfosQuery tokenGetNftInfos = 56; // Get a list of NFTs for the token
    }
}
